<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_egg_batch"
    android:layout_margin="@dimen/fab_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:id="@+id/rl_egg_batch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEggBatchActivity"
    tools:showIn="@layout/activity_add_egg_batch"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_egg_batch_label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <AutoCompleteTextView
            android:id="@+id/et_batch_label"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/egg_batch_label"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_set_date"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_set_date"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_egg_batch_label">
        <AutoCompleteTextView
            android:id="@+id/et_set_date"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/set_date"
            android:inputType="date"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_number_of_eggs"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_number_of_eggs"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_set_date">
        <AutoCompleteTextView
            android:id="@+id/et_number_of_eggs"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_eggs"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/rg_track_weight_loss"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_track_weight_loss"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_number_of_eggs"
        android:imeOptions="actionNext"
        android:nextFocusDown="@+id/et_species_name"
        android:tooltipText="Tracking Option">
        <TextView
            android:id="@+id/tv_track_weight_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tracking Option"
            android:textStyle="bold" />
        <RadioButton
            android:id="@+id/rb_track_entire_batch"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/track_entire_batch" />
        <RadioButton
            android:id="@+id/rb_track_specific_eggs"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/track_specific_eggs" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_species_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_track_weight_loss">
        <AutoCompleteTextView
            android:id="@+id/et_species_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/species_name"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_common_name"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_common_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_species_name">
        <AutoCompleteTextView
            android:id="@+id/et_common_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/common_name"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_incubator_name"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_incubator_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_common_name">
        <AutoCompleteTextView
            android:id="@+id/et_incubator_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/incubator_name"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_incubator_settings"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_incubator_settings"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_incubator_name">
        <AutoCompleteTextView
            android:id="@+id/et_incubator_settings"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Humidity"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_temperature"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_temperature"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_incubator_settings">
        <AutoCompleteTextView
            android:id="@+id/et_temperature"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Temperature"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_location"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_temperature">
        <AutoCompleteTextView
            android:id="@+id/et_location"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_incubation_days"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_incubation_days"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_location">
        <AutoCompleteTextView
            android:id="@+id/et_incubation_days"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Incubation Days"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_target_weight_loss"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_target_weight_loss"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_incubation_days">
        <AutoCompleteTextView
            android:id="@+id/et_target_weight_loss"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Target Weight Loss"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_number_of_eggs_hatched_rl"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_number_of_eggs_hatched_rl"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_target_weight_loss">
        <AutoCompleteTextView
            android:id="@+id/et_number_of_eggs_hatched_rl"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Number Of Eggs Hatched"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_hatch_date"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_hatch_date"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_number_of_eggs_hatched_rl"
        >
        <AutoCompleteTextView
            android:inputType="date"
            android:id="@+id/et_hatch_date"
            android:hint="@string/hatch_date"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save_add_egg_batch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/text_number_of_eggs_hatched_rl"
        android:text="Save" />

</RelativeLayout>
</ScrollView>