<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/egg_wise_main"
        android:title="eggWise Main"
        />

    <item
        android:id="@+id/settings"
        android:title="Settings"
         />

    <item android:id="@+id/egg_batch_mngt"
        android:title="Egg Batch Management" />

    <item android:id="@+id/send_feedback"
        android:title="Send Feedback" />

    <item android:id="@+id/create_alert"
        android:title="Create Alert" />

    <item
        android:id="@+id/quick_start"
        android:enabled="false"
        android:title="Quick Start Tour" />


    <item android:id="@+id/exit_eggwise"
        android:title="Exit eggWise" />
</menu>
