<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radialback3"
    android:orientation="vertical"
    tools:context=".AddEggBatchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_egg_batch"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginRight="@dimen/fab_margin"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_add_egg_batch_flex_layout" />


    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_save_egg_batch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginTop="6dp"
        android:layout_marginRight="80dp"
        app:srcCompat="@android:drawable/ic_menu_save" />-->

    <!--<Button
        android:id="@+id/btn_save_egg_batch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Batch" />-->

</LinearLayout>